clusters/my-cluster/25-gateway-api/2-kong-proxy.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kong-proxy
  namespace: kong-system
spec:
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
      - name: proxy
        image: kong/kong-gateway:3.6
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
