clusters/my-cluster/25-gateway-api/traefik-helm.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
  namespace: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      hostNetwork: true   # optional but recommended for Windows/Docker Desktop
      containers:
      - name: traefik
        image: traefik:v3.0
        args:
          - "--api.insecure=true"
          - "--experimental.kubernetesgateway=true"
          - "--providers.kubernetesgateway=true"
          - "--entrypoints.web.address=:80"
          - "--entrypoints.websecure.address=:443"
        ports:
        - name: web
          containerPort: 80
          hostPort: 80
        - name: websecure
          containerPort: 443
          hostPort: 443
