clusters/my-cluster/25-gateway-api/4-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: podinfo2
spec:
  parentRefs:
    - name: kong-gw
      namespace: kong-system
  hostnames:
    - "podinfo.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: my-podinfo
          port: 9898
